--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 base_model\weights-improvement-26-0.56.hdf5 filter=lfs diff=lfs merge=lfs -text
 more_data_model\weights-improvement-26-0.65.hdf5 filter=lfs diff=lfs merge=lfs -text
+base_model\*.hdf5 filter=lfs diff=lfs merge=lfs -text
+more_data_model\*.hdf5 filter=lfs diff=lfs merge=lfs -text
